--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2021"
 anyhow = "1.0.83"
 colored = "2.1.0"
 fuzzy-matcher = "0.3.7"
+inquire = "0.7.5"
 rayon = "1.10.0"
+strum = "0.26.2"
+strum_macros = "0.26.2"
